<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivMe"
        android:layout_width="124dp"
        android:layout_height="113dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/me" />

    <TextView
        android:id="@+id/tvInfoContact"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivMe"
        android:text="@string/contact"
        android:textSize="@dimen/headerSize" />

    <TextView
        android:id="@+id/tvTextContact"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvInfoContact"
        android:text="@string/contactInfo"
        android:textSize="@dimen/infoSize" />

    <TextView
        android:id="@+id/tvInfoSkills"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTextContact"
        android:text="@string/skills"
        android:textSize="@dimen/headerSize" />

    <TextView
        android:id="@+id/tvTextSkills"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvInfoSkills"
        android:text="@string/skillsText"
        android:textSize="@dimen/infoSize" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/ivMe">

        <TextView
            android:id="@+id/tvCv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cv" />
    </ScrollView>

</RelativeLayout>